syntax = "proto3";

option go_package = "swallowtail/s.binance/proto;bookmarkerproto";

service bookmarker {
    rpc TmpPing (TmpPingRequest) returns (TmpPingResponse) {}
}

message TmpPingRequest {
    string message = 1;
}

message TmpPingResponse {
    string message = 1;
}
